# bmbp_http_type

./: .gitignore  Cargo.toml  README.md
src/: err.rs  lib.rs  req.rs  resp.rs
tests/: test_resp.rs
